# fmruby-core

./: .gitignore  .gitmodules  .rake_tasks~  CLAUDE.md  CMakeLists.txt  Doxyfile  History.md  Makefile  README.md  Rakefile  THIRD_PARTY_LICENSES.md  build_linux.sh  run_core_linux.sh  sdkconfig.defaults  test_host.sh
.github/workflows/: build.yml  docker-publish.yml
components/fmrb_audio/: CMakeLists.txt  fmrb_audio.c
components/fmrb_cobs/: CMakeLists.txt
components/fmrb_common/: CMakeLists.txt  fmrb_app.h  fmrb_err.h  fmrb_pin_assign.h
components/fmrb_common/include/: fmrb_app.h  fmrb_mem_config.h  fmrb_rtos.h
components/fmrb_gfx/: CMakeLists.txt  fmrb_gfx.c  fmrb_gfx.h  fmrb_gfx_commands.c  fmrb_gfx_commands.h
components/fmrb_hal/: CMakeLists.txt  fmrb_hal.h  fmrb_hal_file.h  fmrb_hal_gpio.c  fmrb_hal_time.h  fmrb_hal_uart.h
components/fmrb_hal/platform/esp32/: fmrb_hal_file_esp32.c  fmrb_hal_link_esp32.c  fmrb_hal_spi_esp32.c
components/fmrb_hal/platform/posix/: fmrb_hal_file_posix.c  fmrb_hal_link_posix.c  fmrb_hal_spi_posix.c  fmrb_hal_uart_posix.c
components/fmrb_link/: CMakeLists.txt  fmrb_link_protocol.c  fmrb_link_protocol.h  fmrb_link_transport.c
components/fmrb_log/: CMakeLists.txt  fmrb_log.h
components/fmrb_mem/: CMakeLists.txt  fmrb_alloc.c  fmrb_mem.h  fmrb_mempool.c
components/fmrb_msg/: CMakeLists.txt  fmrb_gfx_msg.h  fmrb_msg.c  fmrb_msg.h  fmrb_msg_payload.h
components/fmrb_rtos/: CMakeLists.txt
components/fmrb_rtos/include/: fmrb_rtos_types.h
components/fmrb_toml/: fmrb_toml.c
components/lua/: CMakeLists.txt  fmrb_lua.c
components/lua/extension/: README.md  fmrb_lua_gfx.c  fmrb_lua_gfx.h
components/lua/include/: fmrb_lua.h
components/picoruby-esp32/: CMakeLists.txt  picoruby-esp32.c  prism_compile_mutex.c
components/picoruby-esp32/picoruby/build_config/: family_mruby_esp32.rb  family_mruby_linux.rb
components/picoruby-esp32/picoruby/include/: picoruby.h
components/picoruby-esp32/picoruby/mrbgems/: posix-microruby.gembox
components/picoruby-esp32/picoruby/mrbgems/picoruby-fmrb-app/: mrbgem.rake
components/picoruby-esp32/picoruby/mrbgems/picoruby-fmrb-app/example/: user-app-sample.rb
components/picoruby-esp32/picoruby/mrbgems/picoruby-fmrb-app/mrblib/: fmrb-app.rb
components/picoruby-esp32/picoruby/mrbgems/picoruby-fmrb-app/src/: fmrb_audio_binding.c  picoruby_fmrb_app.c
components/picoruby-esp32/picoruby/mrbgems/picoruby-fmrb/mrblib/: fmrb.rb
components/picoruby-esp32/picoruby/mrbgems/picoruby-mruby/src/: alloc.c  task.c
components/toml_parser/: CMakeLists.txt
data/: README.md
data/etc/: system_conf.toml
doc/: CLAUDE.md  HAL_MIGRATION_STATUS.md  IPC_spec.md  PreSym.md  Software_Architecture.md  about_esp_idf_linux_target.md  debug_ipc_crash_investigation.md  filesystem.md  filesystem_api.md  filesystem_refactoring.md  gc-arena-howto_ja.md  gdb_debug.md  gfx_coverage.md  gfx_thread_safe_refactoring.md  hid_event_dispatch_investigation.md  main_structure.md  memo.md  mrb_funcall_usage_patterns.md  mrbgems_ja.md  mruby_ci_pointer_crash_investigation_ja.md  mruby_ci_realloc_investigation_ja.md  picoruby_shell_analysis_ja.md  require_sandbox_usage.md  todo.md
docker/: Dockerfile  build.sh
host/sdl2/: CMakeLists.txt
host/sdl2/include/: graphics_handler.h  socket_server.h
host/sdl2/src/: audio_handler.c  graphics_handler.c  graphics_handler.cpp  input_handler.c  input_handler.h  main.c  main.cpp  socket_server.c
lib/: family_mruby_esp32.rb  family_mruby_linux.rb
main/: CMakeLists.txt  boot.c  boot.h  main.c
main/app/: fmrb_app.c  fmrb_app.h  fmrb_app_spawner.c  fmrb_default_apps.c
main/app/default_app/mrb/: config.c  editor.c  shell.c
main/app/default_app/mrblib/: shell.app.rb
main/boot/: boot.c  boot.h
main/drivers/fs_proxy/: fs_proxy_task.c  fs_proxy_task.h
main/drivers/usb/: fmrb_keymap.c  usb_task.c  usb_task.h  usb_task_linux.c
main/include/: fmrb.h  fmrb_app.h  fmrb_err.h  fmrb_hid_msg.h  fmrb_mem.h  fmrb_pin_assign.h  fmrb_task_config.h  fmrb_toml.h  task_config.h
main/kernel/: fmrb_kernel.c  fmrb_kernel.h  system_task.c
main/kernel/host/: host_task.c  host_task.h
main/kernel/mrblib/: fmrb_kernel.rb  kernel.rb  system_gui.app.rb
main/kernel/system/: system_task.c  system_task.h
main/lib/fmrb_audio/: CMakeLists.txt  fmrb_audio.c  fmrb_audio.h  fmrb_audio_mixer.c  fmrb_audio_mixer.h  fmrb_audio_queue.c  fmrb_audio_queue.h  fmrb_audio_stream.c  fmrb_audio_stream.h
main/lib/fmrb_gfx/: CMakeLists.txt  fmrb_gfx.c  fmrb_gfx.h  fmrb_gfx_commands.c  fmrb_gfx_commands.h  fmrb_gfx_window.h
main/lib/fmrb_hal/: CMakeLists.txt  fmrb_hal.c  fmrb_hal.h  fmrb_hal_esp.h  fmrb_hal_file.h  fmrb_hal_gpio.c  fmrb_hal_gpio.h  fmrb_hal_ipc.c  fmrb_hal_ipc.h  fmrb_hal_link.h  fmrb_hal_msg.c  fmrb_hal_msg.h  fmrb_hal_rtos.h  fmrb_hal_spi.c  fmrb_hal_spi.h  fmrb_hal_time.c  fmrb_hal_time.h  fmrb_hal_uart.h  fmrb_keymap.h
main/lib/fmrb_hal/platform/esp32/: fmrb_hal_file_esp32.c  fmrb_hal_ipc_esp32.c  fmrb_hal_link_esp32.c  fmrb_hal_spi_esp32.c  fmrb_hal_uart_esp32.c
main/lib/fmrb_hal/platform/linux/: fmrb_hal_file_linux.c  fmrb_hal_ipc_linux.c
main/lib/fmrb_hal/platform/posix/: fmrb_hal_file_posix.c  fmrb_hal_ipc_posix.c  fmrb_hal_link_posix.c  fmrb_hal_spi_posix.c  fmrb_hal_uart_posix.c
main/lib/fmrb_ipc/: CMakeLists.txt  fmrb_ipc_cobs.h  fmrb_ipc_protocol.c  fmrb_ipc_protocol.h  fmrb_ipc_transport.c  fmrb_ipc_transport.h
main/lib/fmrb_link/: CMakeLists.txt  fmrb_link_protocol.c  fmrb_link_protocol.h  fmrb_link_transport.c  fmrb_link_transport.h
main/lib/fmrb_log/: CMakeLists.txt  fmrb_log.h
main/lib/fmrb_mem/: CMakeLists.txt  fmrb_alloc.c  fmrb_mem.h  fmrb_mempool.c  prism_alloc.c
main/lib/fmrb_msg/: CMakeLists.txt  fmrb_gfx_msg.h  fmrb_msg.c  fmrb_msg.h  fmrb_msg_payload.h
main/lib/fmrb_toml/: CMakeLists.txt  fmrb_toml.c  toml.c
main/prebuild_scripts/: compile_ruby_to_bytecode.cmake
main/prebuild_scripts/default_app/: shell.app.rb
main/prebuild_scripts/kernel/: fmrb_kernel.rb  system_gui.app.rb
tool/: client.sh  fmrb_test_server.rb  fmrb_transfer.rb  test.sh
(+132 files in other folders)
